force-app/main/default/objects/Floor_Plan__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building</label>
    <referenceTo>BuildingSection__c</referenceTo>
    <relationshipLabel>Floor Plan</relationshipLabel>
    <relationshipName>Floor_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>