force-app/main/default/objects/Floor_Plan__c/fields/File_Name_Furniture__c.field-meta.xml
<CustomField>
    <fullName>File_Name_Furniture__c</fullName>
    <label>File Name Furniture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>