force-app/main/default/objects/Floor_Plan__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Floor Plan</relationshipLabel>
    <relationshipName>Floor_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>