force-app/main/default/objects/Floor_Plan__c/fields/Typology__c.field-meta.xml
<CustomField>
    <fullName>Typology__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 BED</fullName>
            </value>
            <value>
                <fullName>1 BED + Multi</fullName>
            </value>
            <value>
                <fullName>1 BED + O</fullName>
            </value>
            <value>
                <fullName>1BED + O + U +Pool+ 2 FullBath</fullName>
            </value>
            <value>
                <fullName>1 BED + Office</fullName>
            </value>
            <value>
                <fullName>1 BED + POOL</fullName>
            </value>
            <value>
                <fullName>1 BED Condo</fullName>
            </value>
            <value>
                <fullName>1 BED Deluxe</fullName>
            </value>
            <value>
                <fullName>1 BED Executive</fullName>
            </value>
            <value>
                <fullName>1 BED Executive + Pool</fullName>
            </value>
            <value>
                <fullName>1 BED Executive + Pool + PT</fullName>
            </value>
            <value>
                <fullName>1 Bedroom</fullName>
            </value>
            <value>
                <fullName>1 Bedroom + Study</fullName>
            </value>
            <value>
                <fullName>1 Bedroom Executive</fullName>
            </value>
            <value>
                <fullName>1 BED Type A</fullName>
            </value>
            <value>
                <fullName>1 BED Type B</fullName>
            </value>
            <value>
                <fullName>1 BED Type c</fullName>
            </value>
            <value>
                <fullName>1 BHK + Multi</fullName>
            </value>
            <value>
                <fullName>1 BHK + O</fullName>
            </value>
            <value>
                <fullName>2 BED</fullName>
            </value>
            <value>
                <fullName>2 BED + O</fullName>
            </value>
            <value>
                <fullName>2 BED+O+Pool</fullName>
            </value>
            <value>
                <fullName>2 BED + O + Pool</fullName>
            </value>
            <value>
                <fullName>2 BED+Pool</fullName>
            </value>
            <value>
                <fullName>2 BED + POOL</fullName>
            </value>
            <value>
                <fullName>2 BED + Pool + Study</fullName>
            </value>
            <value>
                <fullName>2 BED + S</fullName>
            </value>
            <value>
                <fullName>2 BED + S + Pool + PT</fullName>
            </value>
            <value>
                <fullName>2 BED Condo</fullName>
            </value>
            <value>
                <fullName>2 BED Condo+Pool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>